--- a/tag.html
+++ b/tag.html
@@ -1,4 +1,7 @@
 <center>
-<h1>Deva<h1>
+    <h1>Deva
+        <h1>
 </center>
 <hr>
+<p>She's very compassionate and always there when I need her. One of the things I value most about her is that she is supportive and loyal, especially in difficult times. We have a lot of common interests, like traveling and watching movies, and [...] My
+    best friend is an amazing person.</p>
